--- a/projeto/pagjs.html
+++ b/projeto/pagjs.html
@@ -1,46 +1,103 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<meta charset="utf-8">
-	<title>Login</title>
+	<title>Faça seu Login| Cadastre-se</title>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 	<style type="text/css">	
 	body {
-		background:url(fundo6.jpg);
-	}		
+		margin: 0;
+		padding: 0;
+		background-color: #ffffff;
+		font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+		font-size: 20px;
+	}
+	.fundo {
+		width: 100%;
+	}	
 	a {
-		color: #ffffff;
+		color: #111111;
 	text-decoration: none;
+	transition: 0.3s ease-in;
 	}
 	a:hover {
-		text-decoration: underline;
+		color: #0099ff;
+		
+		text-decoration: none;
 	}
-		form {
-			
-		  width: 300px;
-    box-shadow: rgb(0, 0, 0);
-    font-size: 12pt;
-    margin-top: 10px;
-    padding: 100px;
-    overflow: auto;
-    margin-left: 350px; 
+	.container{
+		display: flex;
+		justify-content: space-between;
+	}
+	.parte1{
+		width: 40%;
+	}
 
-	}
 	div.input {
-		margin-top: 20px;
+		width: 100%;
 		color:white;
-		background-color: #062136;
-		opacity: 70%;
+		background-color: #0099ff;
+		border-radius: 2%;
+		padding-top: 10px;
+		box-shadow: rgba(0, 0, 0, .9);
+		
+		
 	}
+	.logo-1{
+            font-size: 70px;
+            font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+            color: #0099ff;
+			text-align: center;
+        }
 
-		div#link {
-	margin: 20px 0px 0px 0px ;
-	}
-		fieldset#form {
-		margin: center;
-	}
-	p {
+        .logo{
+            font-size: 35px;
+			font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+color:#bbb8b8 ;
+        }
+		
+	
+	.titulo {
 		text-align: center;
+		font-size: 40px;
+		font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 	}
+	.titulo-1{
+		text-align: center;
+		font-size: 26px;
+		font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	}
+	.hero-img{
+		width:500px;
+		margin-bottom: 0;
+		padding-bottom:0 ;
+	}
+	.form-group{
+		width: 90%;
+		margin-left: 25px;
+		
+		
+			}
+			.link{
+				width:100% ;
+				margin-left: 16px;
+				font-size: 20px;
+			}
+			.btn{
+				width: 90%;
+				margin-left: 25px;
+				margin-bottom: 10px;
+				background-color: #1b6fcf;
+				transition: 0.3s ease-in;
+			}
+			.btn:hover{
+				background-color: #0b2e57;
+
+			}
+	
 
 	</style>
 			<script>
@@ -72,29 +129,40 @@
 </script>
 	</head>
 	<body>
-		<div id="fundo">
+		<div class="container">
+			<div class="parte1">
+				<P class="titulo">Welcome
+					<small>to</small>
+					<p class="logo-1">Sty<strong class="logo">Register</strong></p>
+				<P class="titulo-1">To Start login</P>
 	<form method="post" name="frm" id="frm"  action="">
 			<div class="input">
-				<div id="welcome"></div>
-				<fieldset id="form">
-					<P id="titulo">Faça o login</P><br>
+					
+					<div class="form-group">
+				<label for="email">User </label>
+					<input type="email" name="email" id="email" size="20" maxlength="30" placeholder="Your User" required=""class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+					</div>
+					<div class="form-group">
+				<label for="password">Password</label>
+					<input type="password" name="password" id="password" class="form-control" size="10" maxlength="13" placeholder="Password" required=""><br>
+					</div>
 
-				<p><label for="email">Usuário: </label>
-					<input type="email" name="email" id="email" size="20" maxlength="30" placeholder="Digite o Usuário" required="" /><br></p>
-				<p><label for="password">Senha: </label>
-					<input type="password" name="password" id="password" size="10" maxlength="13" placeholder="Digite a Senha" required=""><br></p>
-				<input type="submit" value="Entrar" onclick="login()" ><br/>
-		<div id="link">
+					<button type="submit" class="btn btn-primary" onclick="login()">Acess</button><br/>
+				</div>
+			</form>
+			<div class="link">
 				<span >
-				  Ainda não possui conta? 
+				  don't have a registration? 
 				<b>
-				  <a href="cadastro.html" target="_blank" id="link" > Siga por aqui</a>
+				  <a href="cadastro.html" target="_blank" id="link">follow here</a>
 				</b>
 			</div>
 			  </span>
-				</fieldset>
-				</div>
-			</form>
+			</div>
+			<div id="welcome"></div>
+		<img src="/img/undraw_Login_re_4vu2.svg" alt="" class="hero-img">
+			
 		</div>
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,96L120,133.3C240,171,480,245,720,261.3C960,277,1200,235,1320,213.3L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
 		</body>
 	</html>
